chore: Update hotel routes to use GET instead of POST for filtering and fixed the logic
